--- a/cbtEmulater/build.xml
+++ b/cbtEmulater/build.xml
@@ -4,8 +4,8 @@
     <!--ANT 1.7 is required-->
     <!--define folder properties-->
     <property name="dir.buildfile" value="."/>
-    <property name="dir.workspace" value="E:/program/eclipse/pleiades-2019/pleiades/workspace"/>
-    <property name="dir.jarfile" value="Y:/CBTエミュレータ/リリース/win/cbtEmulater"/>
+    <property name="dir.workspace" value="E:\program\git\javafxcontent\cbtEmulater"/>
+    <property name="dir.jarfile" value="Y:/CBTエミュレータ/リリース/win"/>
     <target name="create_run_jar">
         <jar destfile="${dir.jarfile}/cbtEmulater.jar">
             <manifest>
